# cognitive-apprenticeship

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
author/: admin.py  email.py  forms.py  mixins.py  models.py  state_machine.py  urls.py  views.py
author/migrations/: 0001_initial.py  0002_manuscriptauthorship_deleted.py  0003_auto_20210806_1626.py  0004_auto_20210806_1626.py  0005_alter_manuscriptauthorship_manuscript.py  0006_alter_revision_status.py  0007_auto_20210917_1327.py
cognitive_apprenticeship/: asgi.py  settings.py  urls.py  wsgi.py
cognitive_apprenticeship/deploy/: gunicorn615.service  gunicorn615.socket  nginx.conf  settings_logging.py
cognitive_apprenticeship/templates/: base.html  menu.html
common/: due_date.py  email.py  models.py  state_machine.py  urls.py  views.py
common/static/base/: menu.css  (+1 more)
common/templates/: base.html  footer.html  menu.html
cp_utils/: apps.py
editor/: admin.py  forms.py  models.py  urls.py  views.py
editor/migrations/: 0001_initial.py  0002_auto_20210915_0101.py  0003_alter_journalissue_manuscripts.py  0004_alter_journalissue_manuscripts.py  0005_alter_journalissue_manuscripts.py  0006_alter_journalissue_title.py  0007_alter_journalissue_published.py  0008_auto_20210919_2348.py  0009_alter_journalissue_manuscripts.py  0010_alter_journalissue_published.py  0011_alter_journalissue_options.py
public/: urls.py  views.py
reviewer/: assignment.py  email.py  forms.py  mixins.py  models.py  state_machine.py  urls.py  views.py
roles/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+84 files in other folders)
